--- a/ui/templates/index.html
+++ b/ui/templates/index.html
@@ -23,8 +23,8 @@
 <div class="chat-options">
   <input class="chat-option" type="button" value="Ein Schlaganfall kann ausgelöst werden durch" id="button1" />
   <input class="chat-option" type="button" value="Die koronare Herzkrankheit beeinflusst die Gesundheit, da" id="button2" />
-  <input class="chat-option" type="button" value="TODO " id="button3" />
-  <input class="chat-option" type="button" value="TODO" id="button4" />
+  <input class="chat-option" type="button" value="Die gesundheitlichen Folgen vom Rauchen sind " id="button3" />
+  <input class="chat-option" type="button" value="Um erfolgreich das komplette Tumorgewebe eines Hirntumors zu entfernen, muss" id="button4" />
 </div>
 <div id="chat-container">
     <!-- Messages will be displayed here -->
