Added Llama to ui

--- a/ui/templates/index.html
+++ b/ui/templates/index.html
@@ -18,6 +18,8 @@
     <option value="LeoLM/leo-mistral-hessianai-7b">LeoLM/leo-mistral-hessianai-7b</option>
     <option value="medalpaca/medalpaca-7b">medalpaca/medalpaca-7b</option>
     <option value="mistralai/Mistral-7B-v0.1">mistralai/Mistral-7B-v0.1</option>
+    <option value="meta-llama/Llama-2-7b-chat-hf">meta-llama/Llama-2-7b-chat-hf</option>
+    <option value="meta-llama/Llama-2-7b-hf">meta-llama/Llama-2-7b-hf</option>
   </select>
 </div>
 <div class="chat-options">
@@ -31,7 +33,7 @@
     <div id="messages" class="message-container"></div>
   </div>
   <div id="input-container">
-    <input type="text" id="user-input" placeholder="Message Luminous..." />
+    <input type="text" id="user-input" placeholder="Prompt..." />
     <button id="send-button">↑</button>
   </div>
 
